--- a/app.yaml
+++ b/app.yaml
@@ -7,9 +7,9 @@ handlers:
   - url: /assets
     static_dir: build/assets
 
-  - url: /(.*\.(json|ico|js))$
+  - url: /(.*\.(json|ico|js|svg))$
     static_files: build/\1
-    upload: build/.*\.(json|ico|js)$
+    upload: build/.*\.(json|ico|js|svg)$
 
   - url: .*
     static_files: build/index.html
