--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_CLIENT = Dashworx123
-REACT_APP_THEME_COLOR = #000000
+REACT_APP_CLIENT_NAME = Dashworx123
+REACT_APP_PRIMARY_COLOR = #000000
