--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-full-screen": "^1.1.1",
     "react-hook-form": "^7.48.2",
     "react-inlinesvg": "^4.1.3",
     "react-router-dom": "^6.20.1",
