--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-floating-action-button": "^1.0.5",
     "react-full-screen": "^1.1.1",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.48.2",
     "react-inlinesvg": "^4.1.3",
     "react-router-dom": "^6.20.1",
