--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.48.2",
     "react-inlinesvg": "^4.1.3",
+    "react-qr-code": "^2.0.15",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
