--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,8 @@
 steps:
 
+  - name: "gcr.io/cloud-builders/npm"
+    args: ["cache", "clean", "--force"]
+
 # frontend deployment
 # Step 1: For installing dependencies
   - name: "gcr.io/cloud-builders/npm"
