--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,14 @@
 steps:
 
   - name: "gcr.io/cloud-builders/npm"
+    args: ["run", "clean"] # A custom clean script if defined (optional)
+
+  - name: "gcr.io/cloud-builders/npm"
     args: ["cache", "clean", "--force"]
 
-# frontend deployment
-# Step 1: For installing dependencies
+  - name: "gcr.io/cloud-builders/bash"
+    args: ["-c", "rm -rf package-lock.json node_modules"]
+
   - name: "gcr.io/cloud-builders/npm"
     args: ["install"]
 
