--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,26 +1,15 @@
 steps:
-
-  - name: "gcr.io/cloud-builders/npm"
-    args: ["run", "clean"] # A custom clean script if defined (optional)
-
-  - name: "gcr.io/cloud-builders/npm"
-    args: ["cache", "clean", "--force"]
-
-  - name: "gcr.io/cloud-builders/bash"
-    args: ["-c", "rm -rf package-lock.json node_modules"]
-
+# frontend deployment
+# Step 1: For installing dependencies
   - name: "gcr.io/cloud-builders/npm"
     args: ["install"]
-
 # Step 2: For creating optinimized build
   - name: "gcr.io/cloud-builders/npm"
     args: ["run", "build"]
-
 # Step 3: This step will execute app.yaml in your ui folder and deploy your app based on the configuration specified
   - name: "gcr.io/cloud-builders/gcloud"
     args: ["app", "deploy"]
 # timeout specified for this step as deployment may take more that default time(10min)
     timeout: "30m0s" 
-
 options:
   logging: CLOUD_LOGGING_ONLY
